<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_button_1">Spotify Streamer</string>
    <string name="main_menu_button_toast_1">this button will launch my Spotify Streamer app!</string>
    <string name="main_menu_button_2">Scores App</string>
    <string name="main_menu_button_toast_2">this button will launch my Scores App!</string>
    <string name="main_menu_button_3">Library App</string>
    <string name="main_menu_button_toast_3">this button will launch my Library App!</string>
    <string name="main_menu_button_4">Build It Bigger</string>
    <string name="main_menu_button_toast_4">this button will launch my Build It Bigger App!</string>
    <string name="main_menu_button_5">XYZ Reader</string>
    <string name="main_menu_button_toast_5">this button will launch my XYZ Reader App!</string>
    <string name="main_menu_button_6">Capstone: My Own App</string>
    <string name="main_menu_button_toast_6">this button will launch my Capstone App!</string>


</resources>
