<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/main_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/main_title"
        android:gravity="center"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_height="fill_parent"
            android:layout_weight="@integer/main_left_pane_weight"
            android:layout_width="wrap_content">
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:layout_weight="@integer/main_center_pane_weight"
            android:orientation="vertical">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/main_button_weight"
                android:text="@string/main_menu_button_1"
                android:textSize="18sp"
                android:id="@+id/button"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/button_text_1"
                android:background="@color/button_background_1"
                android:layout_gravity="center_horizontal"
                android:onClick="sendMessage1"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/main_button_weight"
                android:text="@string/main_menu_button_2"
                android:textSize="18sp"
                android:id="@+id/button2"
                android:textColor="@color/button_text_1"
                android:background="@color/button_background_1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:onClick="sendMessage2"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/main_button_weight"
                android:text="@string/main_menu_button_3"
                android:textSize="18sp"
                android:id="@+id/button3"
                android:textColor="@color/button_text_1"
                android:background="@color/button_background_1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:onClick="sendMessage3"/>


            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/main_button_weight"
                android:text="@string/main_menu_button_4"
                android:textSize="18sp"
                android:id="@+id/button4"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/button_text_1"
                android:background="@color/button_background_1"
                android:layout_gravity="center_horizontal"
                android:onClick="sendMessage4"/>


            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/main_button_weight"
                android:text="@string/main_menu_button_5"
                android:textSize="18sp"
                android:id="@+id/button5"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/button_text_1"
                android:background="@color/button_background_1"
                android:layout_gravity="center_horizontal"
                android:onClick="sendMessage5"/>



            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/main_button_weight"
                android:text="@string/main_menu_button_6"
                android:textSize="14sp"
                android:id="@+id/button6"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="35dp"
                android:textColor="@color/button_text_2"
                android:background="#ffec081c"
                android:layout_gravity="center_horizontal"
                android:onClick="sendMessage6"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="@integer/main_right_pane_weight"/>

    </LinearLayout>
</LinearLayout>